✨ feat: added question

--- a/main.ipynb
+++ b/main.ipynb
@@ -203,6 +203,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Número de clientes únicos por Ano e comparativo desse resultado 2013x2015 (em gráfico e tabela)**"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
